# rust-python-test

./: .dockerignore  Cargo.toml  Dockerfile  pyproject.toml
src/: lib.rs
