[package]
name = "rust-python-test"
version = "0.1.0"
authors = ["Jacob Lifshay <programmerjake@gmail.com>"]
edition = "2018"
license = "LGPL-2.1-or-later"
publish = false

[lib]
name = "rust_python_test"
crate-type = ["rlib", "cdylib"]

[features]
python = ["pyo3"]
python-extension = ["python", "pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.8.0", optional = true }
